--- a/index.html
+++ b/index.html
@@ -1,171 +1,152 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>대한민국 통합 게시판</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      background-color: #111;
-      color: white;
-      font-family: 'Pretendard', sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>대한민국 통합 게시판 v3</title>
+<style>
+body {
+  background:#111; color:white; font-family:Arial,sans-serif;
+  text-align:center; margin:0; padding:20px;
+}
+.container { max-width:900px; margin:auto; }
 
-    /* ===== 공지 네온 효과 (색상변환만, 스크롤 없음) ===== */
-    .notice {
-      font-size: 20px;
-      margin-bottom: 15px;
-      animation: neonGlow 2s infinite alternate;
-    }
-    @keyframes neonGlow {
-      0% { color: #00ffff; text-shadow: 0 0 8px #00ffff; }
-      50% { color: #ff00ff; text-shadow: 0 0 8px #ff00ff; }
-      100% { color: #ffff00; text-shadow: 0 0 8px #ffff00; }
-    }
+/* ===== 공지 ===== */
+.notice {
+  font-size:20px; margin-bottom:15px;
+  animation:neonGlow 2s infinite alternate;
+}
+@keyframes neonGlow {
+  0%{color:#00ffff;text-shadow:0 0 8px #00ffff;}
+  50%{color:#ff00ff;text-shadow:0 0 8px #ff00ff;}
+  100%{color:#ffff00;text-shadow:0 0 8px #ffff00;}
+}
 
-    #messages {
-      width: 95%;
-      max-width: 700px;
-      margin: 0 auto;
-      border: 1px solid #444;
-      border-radius: 10px;
-      background-color: #1a1a1a;
-      padding: 10px;
-      height: 350px;
-      overflow-y: auto;
-      text-align: left;
-    }
+/* ===== 게시판 ===== */
+#messages {
+  border:1px solid #444; border-radius:10px;
+  background:#1a1a1a; padding:10px;
+  height:450px; overflow-y:auto; text-align:left;
+}
+table {width:100%; border-collapse:collapse;}
+th,td {padding:6px; border-bottom:1px solid #333;}
+th{background:#222;}
+td.time{width:10%;color:#aaa;font-size:13px;}
+td.channel{width:15%;color:#66ccff;text-align:center;}
+td.nickname{width:10%;color:#0ff;text-align:center;}
+td.content{width:65%;word-break:break-word;}
+@media(max-width:600px){
+  td.time{display:none;}td.channel{width:20%;}
+  td.content{width:80%;font-size:15px;}
+}
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      color: white;
-    }
-
-    th, td {
-      padding: 8px;
-      border-bottom: 1px solid #333;
-    }
-
-    th {
-      background-color: #222;
-    }
-
-    /* 시간/채널/내용 비율 조정 */
-    td.time { width: 10%; font-size: 13px; color: #aaa; }
-    td.channel { width: 15%; font-size: 13px; color: #66ccff; text-align: center; }
-    td.content { width: 75%; word-break: break-word; }
-
-    input, select {
-      padding: 8px;
-      border-radius: 5px;
-      border: none;
-      margin: 5px;
-    }
-
-    input { width: 50%; }
-    button {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 5px;
-      background-color: #00bfff;
-      color: white;
-      cursor: pointer;
-    }
-    button:hover { background-color: #0080ff; }
-
-    @media (max-width: 600px) {
-      td.time { display: none; } /* 모바일에서는 시간 숨김 */
-      td.channel { width: 25%; }
-      td.content { width: 75%; font-size: 15px; }
-      input { width: 70%; }
-    }
-  </style>
+input,select{
+  padding:6px;margin:4px;border:none;border-radius:5px;
+}
+button{
+  padding:6px 12px;border:none;border-radius:5px;
+  background:#00bfff;color:white;cursor:pointer;
+}
+button:hover{background:#0080ff;}
+.footer{margin-top:10px;font-size:12px;color:#888;}
+.pagination button{margin:3px;padding:5px 10px;}
+</style>
 </head>
 <body>
-  <div class="notice">🌐 대한민국(통합) 긴급 커뮤니티 채널</div>
+<div class="container">
+  <div class="notice">🌐 대한민국(통합) 긴급 커뮤니티 채널 v3</div>
 
   <div id="messages">
-    <table id="messageTable">
-      <thead><tr><th>시간</th><th>채널</th><th>내용</th></tr></thead>
-      <tbody id="messageBody"></tbody>
-    </table>
+    <table><thead><tr><th>시간</th><th>채널</th><th>닉네임</th><th>내용</th></tr></thead>
+    <tbody id="messageBody"></tbody></table>
   </div>
 
-  <div style="margin-top:15px;">
-    <select id="channelSelect">
-      <option>일반</option>
-      <option>긴급</option>
-      <option>정보</option>
-      <option>공지</option>
-    </select>
+  <div style="margin-top:10px;">
+    <select id="channelSelect"></select>
+    <input id="privateChannel" type="text" placeholder="사설 채널명 (선택)">
+    <input id="nickname" type="text" maxlength="4" placeholder="닉네임(4자)">
     <input id="messageInput" type="text" placeholder="메시지를 입력하세요">
     <button onclick="sendMessage()">전송</button>
   </div>
 
-  <script>
-    const messageBody = document.getElementById("messageBody");
-    const input = document.getElementById("messageInput");
-    const channelSelect = document.getElementById("channelSelect");
+  <div class="pagination" id="pagination"></div>
+  <div class="footer">제작자: luckyyyj77@gmail.com</div>
+</div>
 
-    /* 대한민국 표준시 (KST) */
-    function getKSTTime() {
-      const now = new Date();
-      const utc = now.getTime() + now.getTimezoneOffset() * 60000;
-      const kst = new Date(utc + 9 * 60 * 60000);
-      return kst.toLocaleTimeString('ko-KR', { hour12: false });
-    }
+<script>
+const msgBody=document.getElementById("messageBody");
+const pagination=document.getElementById("pagination");
+const channelSelect=document.getElementById("channelSelect");
+const privateInput=document.getElementById("privateChannel");
+const nicknameInput=document.getElementById("nickname");
+const input=document.getElementById("messageInput");
 
-    /* 메시지 표시 */
-    function addMessageToDOM(time, channel, text) {
-      const row = document.createElement("tr");
-      row.innerHTML = `
-        <td class="time">${time}</td>
-        <td class="channel">${channel}</td>
-        <td class="content">${text}</td>`;
-      messageBody.appendChild(row);
-    }
+let lastPost=0;
+const POST_LIMIT=10000; // 10초 제한
+let currentPage=1,totalPages=1;
 
-    /* 메시지 불러오기 */
-    async function loadMessages() {
-      const res = await fetch("/api/messages");
-      const data = await res.json();
-      messageBody.innerHTML = "";
-      data.forEach(m => addMessageToDOM(m.time, m.channel, m.text));
-    }
+/* ===== 채널 목록 ===== */
+const provinces=["서울","부산","대구","인천","광주","대전","울산","세종","경기","강원","충북","충남","전북","전남","경북","경남","제주"];
+channelSelect.innerHTML=`<option>대한민국(통합)</option>`;
+provinces.forEach(p=>{
+  for(let i=1;i<=9;i++){
+    const opt=document.createElement("option");
+    opt.textContent=`${p}${i}`;
+    channelSelect.appendChild(opt);
+  }
+});
 
-    /* 10초 제한 */
-    let lastPostTime = 0;
-    const POST_LIMIT_MS = 10000; // ⚙️ 수정 가능: 10초 제한
+/* ===== 시간(KST) ===== */
+function getKST(){
+  const now=new Date();
+  const utc=now.getTime()+now.getTimezoneOffset()*60000;
+  return new Date(utc+9*3600000).toLocaleTimeString('ko-KR',{hour12:false});
+}
 
-    /* 메시지 전송 */
-    async function sendMessage() {
-      const now = Date.now();
-      if (now - lastPostTime < POST_LIMIT_MS) {
-        alert("⚠️ 너무 빠릅니다. 10초 후 다시 시도하세요.");
-        return;
-      }
-      const text = input.value.trim();
-      const channel = channelSelect.value;
-      if (!text) return;
+/* ===== 메시지 불러오기 ===== */
+async function loadMessages(page=1){
+  const res=await fetch(`/api/messages?page=${page}`);
+  const data=await res.json();
+  msgBody.innerHTML="";
+  data.data.forEach(addMessage);
+  currentPage=data.page; totalPages=data.pages;
+  renderPagination();
+}
 
-      const msg = { time: getKSTTime(), channel, text };
-      await fetch("/api/messages", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(msg)
-      });
-      addMessageToDOM(msg.time, msg.channel, msg.text);
-      input.value = "";
-      lastPostTime = now;
-    }
+/* ===== 메시지 출력 ===== */
+function addMessage(m){
+  const tr=document.createElement("tr");
+  tr.innerHTML=`<td class="time">${m.time}</td><td class="channel">${m.channel}</td><td class="nickname">${m.nickname||"익명"}</td><td class="content">${m.text}</td>`;
+  msgBody.appendChild(tr);
+}
 
-    /* 5초마다 자동 새로고침 */
-    loadMessages();
-    setInterval(loadMessages, 5000);
-  </script>
+/* ===== 페이지네이션 ===== */
+function renderPagination(){
+  pagination.innerHTML="";
+  for(let i=1;i<=totalPages;i++){
+    const btn=document.createElement("button");
+    btn.textContent=i;
+    if(i===currentPage) btn.style.background="#444";
+    btn.onclick=()=>loadMessages(i);
+    pagination.appendChild(btn);
+  }
+}
+
+/* ===== 메시지 전송 ===== */
+async function sendMessage(){
+  const now=Date.now();
+  if(now-lastPost<POST_LIMIT){alert("⚠️ 너무 빠릅니다. 10초 후 다시 시도하세요.");return;}
+  const text=input.value.trim(); if(!text) return;
+  const channel=privateInput.value.trim()||channelSelect.value;
+  const nickname=nicknameInput.value.trim()||"익명";
+  const msg={time:getKST(),channel,nickname,text};
+  await fetch("/api/messages",{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(msg)});
+  input.value=""; lastPost=now; loadMessages(1);
+}
+
+/* ===== 자동 로드 ===== */
+loadMessages();
+setInterval(()=>loadMessages(currentPage),7000);
+</script>
 </body>
 </html>
